Angular now hooked up. Paths for statics defined in server.js

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
-<html>
+<html ng-app>
 <head>
+	<title>File uploader</title>
+	<script type="text/javascript" src="/angular/angular.js"></script>
 </head>
 <body>
+	{{2+2}}
 	Hello world!
+	
 </body>
 </html>
