Bootstrap now hooked up.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,9 +2,10 @@
 <html ng-app>
 <head>
 	<title>File uploader</title>
+	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css">
 	<script type="text/javascript" src="/angular/angular.js"></script>
 </head>
-<body>
+<body class="container">
 	{{2+2}}
 	Hello world!
 	
