--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,7 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css">
 	<script type="text/javascript" src="/angular/angular.js"></script>
 </head>
-<body class="container">
+<body>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Brand</a>
+			</div>
+		</div>
+
+		<!-- <div> -->
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="#">Link 1</a></li>
+				<li><a href="#">Link 2</a></li>
+			</ul>
+		<!-- </div> -->
+
+	</nav>
 	{{2+2}}
 	Hello world!
 	
