Fix for navbar.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,20 +9,20 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Brand</a>
+				<a class="navbar-brand" href="#">File Uploader</a>
 			</div>
-		</div>
-
-		<!-- <div> -->
+		
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Link 1</a></li>
 				<li><a href="#">Link 2</a></li>
 			</ul>
-		<!-- </div> -->
-
+		</div>
 	</nav>
-	{{2+2}}
-	Hello world!
+
+	<div class="container">
+		{{2+2}}
+		Hello world!
+	</div>
 	
 </body>
 </html>
