All basic views now represented in index.html.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,8 +14,8 @@
 			</div>
 		
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Link 1</a></li>
-				<li><a href="#">Link 2</a></li>
+				<li class="active"><a href="#">Upload</a></li>
+				<li><a href="#">About</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -38,13 +38,14 @@
 				</span>
 				<button type="submit" class="btn btn-primary">Upload file</button>
 
-
-				<!-- 	<label for="text-input">Text</label>
-					<input type="text" id="text-input">
-					
-				</ div>-->
 				<h2>Success!</h2>
 				<p>Your upload has successfully completed. Nice work.</p>
+
+				<h2>Oh no!</h2>
+				<p>Your file didn't upload. Please try again.</p>
+
+				<h2>About</h2>
+				<p>This is a file uploader, made with ア! by <a href="http://ashryanbeats.com">Ash Ryan Beats</a>.
 			</div> <!-- end column -->
 
 
