Success and error states accessible via url now.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,11 +12,11 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="home">File Uploader</a>
+				<a class="navbar-brand" ui-sref="upload">File Uploader</a>
 			</div>
 		
 			<ul class="nav navbar-nav">
-				<li class="active"><a ui-sref="home">Upload</a></li>
+				<li class="active"><a ui-sref="upload">Upload</a></li>
 				<li><a ui-sref="about">About</a></li>
 			</ul>
 		</div>
